--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 julia:
   - 0.5
   - nightly
+  - 0.6
 notifications:
   email: false
 git:
@@ -14,8 +15,9 @@ git:
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
 #matrix:
-#  allow_failures:
-#  - julia: nightly
+allow_failures:
+  - julia: nightly
+  - julia: 0.6
 
 ## uncomment and modify the following lines to manually install system packages
 #addons:
